--- a/scss/base.scss
+++ b/scss/base.scss
@@ -7,8 +7,10 @@ body {
 	font-family: $main_font;
 	background-color: $bg_color;
 	padding-top: 40px;
-	min-width: 755px;
+	min-width: 800px;
 }
+
+div.container[name="main"] {}
 
 .threeColumn {
 	-webkit-column-count: 3; /* Chrome, Safari, Opera */
@@ -20,11 +22,7 @@ body {
 	margin: 30px;
 }
 
-@import 'header';
 
-@import 'buttons';
-
-@import 'records';
 
 
 
@@ -44,9 +42,17 @@ h3 {
     margin-bottom: 5px;
 }
 
-[name="description"] {
-    position: relative;
-    min-width: 400px;
-    max-width: 400px;
+// [name="description"] {
+//     position: relative;
+//     min-width: 400px;
+//     max-width: 400px;
 
-}
+// }
+
+@import 'header';
+
+@import 'buttons';
+
+@import 'records';
+
+@import 'inputs';
