--- a/static/css/hours.css
+++ b/static/css/hours.css
@@ -38,7 +38,7 @@ body {
   font-family: Droid Sans, Arial;
   background-color: #476f9e;
   padding-top: 40px;
-  min-width: 755px; }
+  min-width: 800px; }
 
 .threeColumn {
   -webkit-column-count: 3;
@@ -49,6 +49,19 @@ body {
 
 .footer {
   margin: 30px; }
+
+fieldset.inputs, div.records, div.labels, div#buttons {
+  border: 2px solid black;
+  padding: 10px;
+  background-color: #cccccc;
+  margin-bottom: 25px !important; }
+
+h1 {
+  text-align: center; }
+
+h3 {
+  margin-top: 5px;
+  margin-bottom: 5px; }
 
 div#header {
   margin-top: 20px;
@@ -225,22 +238,66 @@ input[name="notes"] {
   margin-top: 5px;
   width: 90%; }
 
-fieldset.inputs, div.records, div.labels, div#buttons {
-  border: 2px solid black;
-  padding: 10px;
-  background-color: #cccccc;
-  margin-bottom: 25px !important; }
+form fieldset.inputs {
+  margin-top: 20px;
+  margin-bottom: 50px; }
 
-h1 {
-  text-align: center; }
+#inputs-submit {
+  margin-top: 10px; }
 
-h3 {
-  margin-top: 5px;
-  margin-bottom: 5px; }
+div.form-group {
+  display: inline; }
 
-[name="description"] {
-  position: relative;
-  min-width: 400px;
-  max-width: 400px; }
+fieldset[name="inputs"] {
+  width: 100%; }
+  fieldset[name="inputs"] div[name="row1"] input {
+    display: inline-block; }
+  fieldset[name="inputs"] div[name="row1"] input[name="name"] {
+    width: 32%; }
+  fieldset[name="inputs"] div[name="row1"] input[name="start"] {
+    width: 32%; }
+  fieldset[name="inputs"] div[name="row1"] input[name="end"] {
+    width: 32%; }
+  fieldset[name="inputs"] div[name="row2"] div[name="dropdown-wrapper"] {
+    display: inline-block;
+    width: 20%;
+    min-width: 160px; }
+    fieldset[name="inputs"] div[name="row2"] div[name="dropdown-wrapper"] .dropdown {
+      position: relative;
+      width: 150px;
+      height: 34px;
+      border: 0;
+      padding: 0;
+      margin: 0;
+      margin-right: 155px; }
+    fieldset[name="inputs"] div[name="row2"] div[name="dropdown-wrapper"] .dropdownSelect {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 150px;
+      height: 34px;
+      line-height: 20px;
+      margin: 0;
+      padding: 0;
+      padding-left: 10px; }
+    fieldset[name="inputs"] div[name="row2"] div[name="dropdown-wrapper"] .dropdownInput {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 130px;
+      /*#width:180px\9;*/
+      /*#width:180px;*/
+      height: 34px;
+      /*#height:21px\9;*/
+      /*#height:18px;*/
+      /*border:1px solid #556;*/
+      padding-left: 10px; }
+  fieldset[name="inputs"] div[name="row2"] div[name="notes-wrapper"] {
+    display: inline-block;
+    width: 70%;
+    min-width: 380px; }
+    fieldset[name="inputs"] div[name="row2"] div[name="notes-wrapper"] input {
+      display: inline-block;
+      width: 100%; }
 
 /*# sourceMappingURL=hours.css.map */
